--- a/style.css
+++ b/style.css
@@ -8,6 +8,41 @@ body {
 
 }
 
+.aciklama{
+position: relative;
+overflow: hidden;
+}
+.aciklama img{
+width: 100%;
+height: 100%;
+object-fit: cover;
+}
+
+.aciklama-logo{
+position: absolute;
+width: 15%;
+top: 80px;
+left: 80px;
+z-index: 2;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+
+.aciklama-content{
+position: absolute;
+top: 80px;
+left: 80px;
+color: white;
+z-index: 2;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+inset: 0;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
