--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+  font-family: 'Barlow';
+}
 
 header nav{
   list-style:none;
@@ -6,6 +9,7 @@ header nav{
   gap: 28px;
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
 header nav li{
@@ -52,12 +56,11 @@ inset: 0;
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 12px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 1.2em 2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
   background-color: #FDC913;
   cursor: pointer;
   transition: border-color 0.25s;
